--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -865,7 +865,7 @@
 							<div class="text-center w-100"><b>White edge Also called museum wrap.</b></div>
 						</div>
 
-						<div class="col-4 offset-2 text-center">
+						<div class="col-4 text-center">
 							<img src="/img/canvas-stretched-5.jpg" />
 							<div class="text-center w-100"><b>Black edge</b></div>
 						</div>
@@ -875,7 +875,7 @@
 							<div class="text-center w-100"><b>Image wrap Image wraps around the sides of the frame.</b></div>
 						</div>
 
-						<div class="col-4 offset-2 text-center">
+						<div class="col-4 text-center">
 							<img src="/img/canvas-stretched-7.jpg" />
 							<div class="text-center w-100"><b>Mirror wrap Image edge reflected on the sides; entire image appears on the front.</b></div>
 						</div>
