--- a/views/Resetpw.ejs
+++ b/views/Resetpw.ejs
@@ -2,18 +2,18 @@
 
 <div class="container" style="position: sticky;">
 	<form class="resetpw form-slider col-4 offset-4 mt-5" id="resetpw" method="POST" action="/api/user/resetpw">
-		<h1 class="single-title mb-5">Changement de mot de passe</h1>
+		<h2 class="single-title mb-5">Reset your password</h2>
 
-		<input placeholder="Mot de passe" type="password" id="password" name="password" onkeyup="Validate.Password(this);" required />
+		<input placeholder="Password" type="password" id="password" name="password" onkeyup="Validate.Password(this);" required />
 		<span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to be atleast alphanumeric</span>
 
-		<input placeholder="Mot de passe (confirmation)" type="password" id="password2" name="password2" onkeyup="Validate.Password2(this);" required />
+		<input placeholder="Password (confirmation)" type="password" id="password2" name="password2" onkeyup="Validate.Password2(this);" required />
 		<span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
 
 		<input type="hidden" name="tokenId" value="<%= locals.tokenId %>" required />
 		<input type="hidden" name="token" value="<%= locals.token %>" required />
 		<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-		<input type="submit" class="logbtn" value="OK!" id="submit-resetpw" />
+		<input type="submit" class="logbtn" value="Save" id="submit-resetpw" />
 	</form>
 </div>
 
