--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -61,7 +61,9 @@
       </div>
 
       <div class="col-10 offset-1 text-center">
-        <p class="pwinty-disclaimer">For references, check the catalog <a href="/Catalog" target="_blank">HERE</a> </p>
+        <div id="alert" class="alert alert-danger alert-static" role="alert">
+            For references, check the catalog <a href="/Catalog" target="_blank">HERE</a>
+        </div>
         <div class="form-group pwinty-wrapper" id="categories">
             <label for="framed">
               <div class="sku-item unselectable cat-list" onclick="toggleActive(this, 'active-cat');">
